Bug 342574 - Can not edit a progresse entry of a task
Summary: Can not edit a progresse entry of a task
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: usability (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-07 08:54 UTC by renn0xtek9
Modified: 2019-05-13 12:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.89
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description renn0xtek9 2015-01-07 08:54:40 UTC
For a given task  make a progress entry
Click the task as finished
close the dialog
reopen the dialog, untick the finished box 
you can not change the date
you can not change the percentage of completiont
you can not change the amount of time that is left
Comment 1 donalt 2015-09-04 22:30:45 UTC
Following the steps mentioned in the original comment I can reproduce the bug using KDE 4.14.9 on Fedora 22 in Plan version 2.9.5.
I also noticed that if I were to:
1. For a given task open it's progress dialogue and add an entry
2. Tick the started box then tick the finished box
3. Close the dialog 
4. Reopen the dialog, untick the finished box
5. I can not change the date, the completed percentage or the effort columns.[The bug mentioned above]
6. Close the dialog
7. Open the dialog again I can change the completed percentage and the effort columns but not the date.
The date can not be changed even if the started box is unticked
Comment 2 Dag Andersen 2016-09-01 09:23:56 UTC
(In reply to donalt from comment #1)
> Following the steps mentioned in the original comment I can reproduce the
> bug using KDE 4.14.9 on Fedora 22 in Plan version 2.9.5.
> I also noticed that if I were to:
> 1. For a given task open it's progress dialogue and add an entry
> 2. Tick the started box then tick the finished box
> 3. Close the dialog 
> 4. Reopen the dialog, untick the finished box
> 5. I can not change the date, the completed percentage or the effort
> columns.[The bug mentioned above]
Yes, as you say have to close and open again.
> 6. Close the dialog
> 7. Open the dialog again I can change the completed percentage and the
> effort columns but not the date.
> The date can not be changed even if the started box is unticked

True, you have to remove the date entries manually first, but maybe they should be removed automatically.
Comment 3 Dag Andersen 2019-05-13 12:32:07 UTC
Git commit dffca2e1f10dc9c8697dad647fad7a94a4d0bade by Dag Andersen.
Committed on 13/05/2019 at 12:27.
Pushed by danders into branch 'master'.

Improve progress dialog

The dialog was difficult to understand and also too restrictive when disabling certain actions, see

Main change is to put both "resouce entry" tab and "date  entry" tab on the same page, which makes it easier to see the connection between them.
The "resource entry" part  is only shown when in "Per resource" edit mode.
When effort is entered in "resource entry" part, a date entry is automatically added in the "date entry" part.
Also there are now only two modes, "Per Resource" and "Per Task".
"Per Task" includes the functionallity in the prevoius "Calculate Effort" mode.
The default is now set to "Per Resource" as this preferred mode if PlanWork is used, so that this work by default.
If the manager wants easier data entry, he can select "Per Task" edit mode.

Tooltips and What's this has been added to further enhance usability.

FIXED-IN: 3.1.89

M  +1    -1    src/libs/kernel/kpttask.cpp
M  +1    -1    src/libs/models/kptnodeitemmodel.cpp
M  +1    -1    src/libs/models/kpttaskstatusmodel.cpp
M  +23   -0    src/libs/ui/kpttaskprogressdialog.cpp
M  +40   -55   src/libs/ui/kpttaskprogresspanel.cpp
M  +11   -14   src/libs/ui/kpttaskprogresspanel.h
M  +162  -176  src/libs/ui/kpttaskprogresspanelbase.ui
M  +64   -14   src/libs/ui/kptusedefforteditor.cpp
M  +7    -3    src/libs/ui/kptusedefforteditor.h
M  +22   -16   src/workpackage/taskcompletiondialog.cpp
M  +1    -0    src/workpackage/taskcompletiondialog.h
M  +1    -69   src/workpackage/taskcompletionpanel.ui

https://commits.kde.org/calligraplan/dffca2e1f10dc9c8697dad647fad7a94a4d0bade