src/libs/models/kpttaskstatusmodel.cpp
@@ -410,7 +410,7 @@ bool TaskStatusItemModel::setCompletion( Node *node, const QVariant &value, int 
             m->addCommand( new ModifyCompletionFinishTimeCmd( c, dt ) );
         }
         emit executeCommand( m ); // also adds a new entry if necessary
-        if ( c.entrymode() == Completion::EnterCompleted ) {
+        if (c.entrymode() != Completion::EnterEffortPerResource) {
             Duration planned = static_cast<Task*>( node )->plannedEffort( m_nodemodel.id() );
             Duration actual = ( planned * value.toInt() ) / 100;
             debugPlan<<planned.toString()<<value.toInt()<<actual.toString();
